--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,7 @@ Frontend :
     - Ajouter zones manquantes
     - Modifier le onPressIn pour avoir un truc moins sensible
     - Créer un fichier gérant les appels au backend : un ensemble de function faisant des await fecth
+    
+Diagram :
+	- faire diagramme UML pour data (tables)
+	- design ideas (DA etc) 
